debug et correction vis à vis de formule de souscription

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -29,6 +29,7 @@
 @import "pet_card";
 @import "animals_banner";
 @import "animal_show";
+@import "card_payment";
 
 // Import component-specific CSS files here.
 @import "banner";
