--- a/app/views/pricings/index.html.erb
+++ b/app/views/pricings/index.html.erb
@@ -40,7 +40,7 @@
               <div class="m-4" style="margin-top: auto">
                 <%= form_with url: orders_path do %>
                   <%= hidden_field_tag 'pricing_id', pricing.id %>
-                  <%= submit_tag 'Choisir',
+                  <%= submit_tag 'En savoir plus',
                       class: 'btn btn-outline-primary rounded-pill text-black w-100' %>
                 <% end %>
               </div>
