--- a/app/views/professionals/new.html.erb
+++ b/app/views/professionals/new.html.erb
@@ -21,7 +21,7 @@
       <div class="d-flex align-items-center justify-content-between" style="width: 100%;">
         <%= p.label :specialty, "Spécialité :", class: "me-2 mb-0" %>
         <div style="width: 65%;">
-          <%= p.input :specialty, label: false, input_html: {value: current_user.orders.first.pricing.specialty}, readonly: true %>
+          <%= p.input :specialty, label: false, collection: @all_specialty, prompt: "Sélectionnez une spécialité", input_html: { class: "form-select" } %>
         </div>
       </div>
       <%# phone number %>
