--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -17,7 +17,7 @@
       <% if @pet.photo.present? %>
         <%= image_tag @pet.photo_url, class: "card-img-top w-100 h-100 object-fit-cover rounded"%>
       <% else %>
-        <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(1).jpg",
+        <%= image_tag("https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//photo_pet_default.jpg",
                       alt: "photo_pet_default",
                       class: "card-img-top w-100 h-100 object-fit-cover rounded")%>
       <% end %>
