--- a/app/views/pricings/index.html.erb
+++ b/app/views/pricings/index.html.erb
@@ -1,53 +1,101 @@
-<section id="pricing" class="pricing-content section-padding">
+<section id="pricings" class="pricing-content section-padding">
   <div class="container">
     <div class="section-title text-center mb-3 mt-3">
       <h2>Souscription</h2>
-      <p class="mb-3">Choisissez un service à proposer...</p>
+      <p class="m-3">Trouvez le programme idéal et bénéficiez de <span style="font-weight: bold; font-size: large">90 jours d'essai gratuit</span> pour en profiter pleinement ! 🚀</p>
     </div>
-
-    <div class="row flex-nowrap overflow-auto text-center custom-scroll mt-5">
-      <% @pricings.each do |pricing| %>
-        <div class="wow fadeInUp m-2 "
+    <div class="row flex-nowrap overflow-auto text-center custom-scroll mt-5" style="overflow-x: auto;">
+      <div class="wow fadeInUp pricing_content"
              data-wow-duration="1s"
              data-wow-delay="0.1s"
              data-wow-offset="0"
-             style="visibility: visible; animation-duration: 1s; animation-delay: 0.1s; animation-name: fadeInUp; width: 400px">
-          <div class="pricing_design" style="width: auto">
-            <div class="single-pricing" style="height: 420px">
-              <div class="price-head">
-                <h3 class="text-warning">
-                  <%= pricing.title %>
-                </h3>
-                <%if !(pricing.title == "Boop custom")%>
-                <div class="price-display">
-                  <span class="amount"><%= humanized_money(pricing.price) %></span>
-                  <span class="period">/mois</span>
-                </div>
-                <%else%>
-                <div>
-                <span class="amount text-white">XXX
-
-                </span>
-                </div>
-
-                <%end%>
-              </div>
-
-              <p>
-                <%= pricing.description %>
-              </p>
-
-              <div class="m-4" style="margin-top: auto">
-                <%= form_with url: orders_path do %>
-                  <%= hidden_field_tag 'pricing_id', pricing.id %>
-                  <%= submit_tag 'En savoir plus',
-                      class: 'btn btn-outline-primary rounded-pill text-black w-100' %>
-                <% end %>
+             style="visibility: visible; animation-duration: 1s; animation-delay: 0.1s; animation-name: fadeInUp;">
+        <div class="pricing_design">
+          <div class="single-pricing" >
+            <div class="price-head">
+              <h3 class="text-warning">
+                <%= @pricings.present? && @pricings[0].present? ? @pricings[0].title : 'Titre non disponible' %>
+              </h3>
+              <div class="price-display">
+                <span class="amount"><%= humanized_money_with_symbol(@pricings[0].price) %></span>
+                <span class="period">/mois</span>
               </div>
             </div>
+            <div class="pricing_description">
+              <p><%= @pricings[0].description %></p>
+              <ul>
+                <li>Fiche de service détaillée</li>
+                <li>Gestion de rendez-vous</li>
+                <li>Gestion de capacité d'accueil</li>
+              </ul>
+            </div>
+            <script async
+              src="https://js.stripe.com/v3/buy-button.js"></script>
+            <stripe-buy-button
+              buy-button-id="buy_btn_1R66MoGaLMauVNXcpAhuvwaj"
+              publishable-key="pk_test_51R52PTGaLMauVNXcAkkchp5BbDUB9nykOACXCy4HesXXhpTTQEn7e8oPCUNc0ULKTxYgswPuZ0QFJYOSEDotNm3W009IJrEgig">
+            </stripe-buy-button>
           </div>
         </div>
-      <% end %>
+      </div>
+      <div class="wow fadeInUp pricing_content"
+             data-wow-duration="1s"
+             data-wow-delay="0.1s"
+             data-wow-offset="0"
+             style="visibility: visible; animation-duration: 1s; animation-delay: 0.1s; animation-name: fadeInUp; ">
+        <div class="pricing_design">
+          <div class="single-pricing" >
+            <div class="price-head">
+              <h3 class="text-warning">
+                <%= @pricings.present? && @pricings[1].present? ? @pricings[1].title : 'Titre non disponible' %>
+              </h3>
+              <div class="price-display">
+                <span class="amount"><%= humanized_money_with_symbol(@pricings[1].price) %></span>
+                <span class="period">/mois</span>
+              </div>
+            </div>
+            <div class="pricing_description">
+              <p><%= @pricings[1].description %></p>
+              <ul>
+                <li>Toutes les fonctionnalités de Boop One</li>
+                <li>5 comptes professionnels</li>
+                <li>Dashboard dédié à la gestion globale</li>
+              </ul>
+            </div>
+            <script async
+              src="https://js.stripe.com/v3/buy-button.js"></script>
+            <stripe-buy-button
+              buy-button-id="buy_btn_1R66jsGaLMauVNXc1HhSGvHu"
+              publishable-key="pk_test_51R52PTGaLMauVNXcAkkchp5BbDUB9nykOACXCy4HesXXhpTTQEn7e8oPCUNc0ULKTxYgswPuZ0QFJYOSEDotNm3W009IJrEgig">
+            </stripe-buy-button>
+          </div>
+        </div>
+      </div>
+      <div class="wow fadeInUp pricing_content"
+             data-wow-duration="1s"
+             data-wow-delay="0.1s"
+             data-wow-offset="0"
+             style="visibility: visible; animation-duration: 1s; animation-delay: 0.1s; animation-name: fadeInUp; ">
+        <div class="pricing_design auto-width">
+          <div class="single-pricing" >
+            <div class="price-head">
+              <h3 class="text-warning">
+                <%= @pricings.present? && @pricings[2].present? ? @pricings[2].title : 'Titre non disponible' %>
+              </h3>
+            </div>
+            <div class="pricing_description">
+            <p><%= @pricings[2].description %></p>
+              <ul>
+                <li>Toutes les fonctionnalités de Boop 5</li>
+                <li>Configuration avancée de votre compte</li>
+                <li>Support dédié pour vous accompagner </li>
+                <li>Évolutivité maximale avec la possibilité d'ajouter de nouvelles options</li>
+              </ul>
+            </div>
+            <%= link_to "Contactez-nous", contact_path, class: "btn text-white rounded-4 p-2", style: "background-color: rgb(1, 116, 212); width: 80%"%>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
