--- a/app/views/pricings/index.html.erb
+++ b/app/views/pricings/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="section-title text-center mb-3 mt-3">
       <h2>Souscription</h2>
-      <p class="m-3">Trouvez le programme idéal et bénéficiez de <span style="font-weight: bold; font-size: large">90 jours d'essai gratuit</span> pour en profiter pleinement ! 🚀</p>
+      <p class="m-3">Trouvez le programme idéal et bénéficiez de <span class="text-warning" style="font-weight: bold; font-size: x-large"> 90 jours d'essai gratuit </span> pour en profiter pleinement ! 🚀</p>
     </div>
     <div class="row flex-nowrap overflow-auto text-center custom-scroll mt-5" style="overflow-x: auto;">
       <div class="wow fadeInUp pricing_content"
