--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,7 +36,7 @@
               <% end %>
             </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <% if (current_user.orders.count == 1) && (current_user.orders.state == "paid")%>
+              <% if (current_user.orders.count == 1) && (current_user.orders.first.state == "paid")%>
                 <%= link_to "Mon organisme", pro_index_user_path(current_user), class: "dropdown-item" %>
               <% elsif (current_user.orders.count > 1)%>
                 <%= link_to "Mon organisme", pro_index_user_path(current_user), class: "dropdown-item" %>
