--- a/app/assets/stylesheets/components/_animal_show.scss
+++ b/app/assets/stylesheets/components/_animal_show.scss
@@ -2,97 +2,64 @@
   max-width: 1000px;
   margin: 0 auto;
   padding: 40px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 
   .speech-bubble {
     background: #f5f5f5;
     border-radius: 25px;
     padding: 20px 30px;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-200%);
-    top: 100px;
-    z-index: 2;
-    max-width: 200px;
-
-    &:after {
-      content: '';
-      position: absolute;
-      right: -15px;
-      top: 30px;
-      width: 30px;
-      height: 30px;
-      background: #f5f5f5;
-      border-radius: 50%;
-    }
-
-    &:before {
-      content: '';
-      position: absolute;
-      right: -30px;
-      top: 15px;
-      width: 20px;
-      height: 20px;
-      background: #f5f5f5;
-      border-radius: 50%;
-    }
 
     p {
       margin: 0;
-      color: #666;
-      font-size: 16px;
+      color: #e68e2e;
+      font-size: 22px;
       line-height: 1.4;
+      font-weight: bold;
     }
   }
 
   .profile-content {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row; /* 👉 ligne par défaut */
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-shrink: 0;
     width: 100%;
-    max-width: 800px;
     gap: 60px;
-    position: relative;
     margin-top: 40px;
 
     @media (max-width: 768px) {
+      flex-direction: column; /* 👉 colonne en mobile */
+      align-items: center;
       gap: 40px;
-      margin-top: 100px;
     }
-  }
 
-  .pet-image {
-    width: 60%;
-    border-radius: 40px;
-    overflow: hidden;
-    background: white;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
+    .pet-image {
+      flex: 0 0 33.33%;  // 👉 1/3
+      width: 300px !important;
+      height: 300px;
+      border-radius: 40px;
+      overflow: hidden;
+      background: white;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
 
-    img {
+    }
+
+    .pet-image img {
       width: 100%;
-      height: auto;
-      object-fit: cover;
+      height: 100%;
+      object-fit: cover;         // ✅ remplissage sans déformation
+      object-position: center;   // centre le chat
       display: block;
     }
 
-    @media (max-width: 768px) {
+
+    .pet-details-row {
+      flex: 0 0 66.66%; // 👉 2/3
       width: 100%;
-    }
-  }
-
-  .pet-details {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
-    padding: 20px 0;
-
-    @media (max-width: 768px) {
-      grid-template-columns: 1fr;
-      gap: 20px;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 30px;
+      padding: 20px 0;
     }
 
     .detail-item {
