--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <%= favicon_link_tag 'https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//boop_logo.png' %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <%= javascript_include_tag "https://js.stripe.com/v3/" %>
   </head>
 
   <body>
