--- a/app/views/pricings/index.html.erb
+++ b/app/views/pricings/index.html.erb
@@ -31,14 +31,14 @@
               </ul>
             </div>
             <% if user_signed_in? %>
-              <button id="pay"
+              <button
                   class="btn text-white rounded-4 p-2 w-100"
                   style="background-color: rgb(1, 116, 212)"
                   data-controller="create-order"
+                  data-action="click->create-order#createOrder"
                   data-create-order-user-id-value="<%= current_user.id %>"
                   data-create-order-pricing-id-value="<%= @pricings[0].id %>"
-                  data-create-order-stripe-key-value="<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>"
->
+                  data-create-order-stripe-key-value="<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>">
               <h5>Payer</h5>
               </button>
             <% else %>
@@ -74,10 +74,21 @@
             </div>
             <script async
               src="https://js.stripe.com/v3/buy-button.js"></script>
-            <stripe-buy-button
-              buy-button-id="buy_btn_1R66jsGaLMauVNXc1HhSGvHu"
-              publishable-key="pk_test_51R52PTGaLMauVNXcAkkchp5BbDUB9nykOACXCy4HesXXhpTTQEn7e8oPCUNc0ULKTxYgswPuZ0QFJYOSEDotNm3W009IJrEgig">
-            </stripe-buy-button>
+            <% if user_signed_in? %>
+              <button
+                  class="btn text-white rounded-4 p-2 w-100"
+                  style="background-color: rgb(1, 116, 212)"
+                  data-controller="create-order"
+                  data-action="click->create-order#createOrder"
+                  data-create-order-user-id-value="<%= current_user.id %>"
+                  data-create-order-pricing-id-value="<%= @pricings[1].id %>"
+                  data-create-order-stripe-key-value="<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>"
+>
+              <h5>Payer</h5>
+              </button>
+            <% else %>
+              <%= link_to "Démarrer l'essai", new_user_session_path, class: "btn text-white rounded-4 p-2 w-100", style:"background-color: rgb(1, 116, 212)" %>
+            <% end %>
           </div>
         </div>
       </div>
