--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -34,7 +34,7 @@
   <% if @professionals.empty?%>
     <div class="d-flex flex-column justify-content-center align-items-center">
       <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//business-solution-removebg-preview.png" alt="not found" >
-      <p>Nous n'avons pas encore de professionnels qui correspondent à vos recherches.</p>
+      <p class="text-center">Nous n'avons pas encore de professionnels qui correspondent à vos recherches.</p>
     </div>
   <% else %>
     <div class="grid-map">
