--- a/app/views/professionals/edit_availibilities.html.erb
+++ b/app/views/professionals/edit_availibilities.html.erb
@@ -18,6 +18,7 @@
 <%# body %>
 <div class="row d-flex justify-content-center">
   <div class="card_pro col-lg-5 col-md-5 col-sm-10 p-4">
+    <!-- Opening and closing hours -->
     <%= simple_form_for @professional do |p|%>
       <h3 class="text-center" style="text-decoration: underline">Les horaires d'ouvertures</h3>
       <p class="mb-4 text-center"style="font-size: 10px">S'il y a une fermeture d'une demie-journée, veuillez laisser le champs des heures vides.</p>
@@ -68,7 +69,7 @@
     <div id="available-pro"
           data-controller="edit-availabilities"
           data-edit-availabilities-api-key-value="<%= @professional.id %>" data-edit-availabilities-closed-days-value="<%=@closed_days.to_json%>"
-          data-edit-availabilities-all-closed-days-value="<%=@all_closed_days.to_json%>">
+          data-edit-availabilities-all-closed-days-value="<%=@specific_closed_dates.to_json%>">
       <h3 class="text-center my-3" style="text-decoration: underline">Modifier la disponibilité d'un créneau</h3>
       <!-- Sélection de la date (rendu cliquable) -->
       <div class="d-flex flex-row justify-content-center align-items-center">
@@ -100,7 +101,7 @@
                         data: {
                           controller: "calendar-closed-day",
                           action: "click->calendar-closed-day#openPicker",
-                          calendar_closed_day_value: @all_closed_days.to_json
+                          calendar_closed_day_value: @specific_closed_dates.to_json
                         },
                         id: "closedDaySelectedDate"
                       },
@@ -117,7 +118,8 @@
           </div>
         </div>
       <% end %>
-      <%=render "all_closed_days_list", all_closed_days: @all_closed_days, exceptionnal_closed_days: @exceptionnal_closed_days%>
+      <%# list of all national holidays and exceptional closed days %>
+      <%=render "all_closed_days_list", specific_dates: @specific_dates, exceptionnal_closed_days: @exceptionnal_closed_days%>
     </div>
   </div>
 </div>
