--- a/app/views/professionals/_info_window.html.erb
+++ b/app/views/professionals/_info_window.html.erb
@@ -1,6 +1,22 @@
 <a href="<%=professional_path(professional)%>" class="text-decoration-none text-black">
   <div>
-    <%= image_tag professional.photo_url, crop: :fill, width: 180%>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <% professional.photos_url.each_with_index do |photo_url, index| %>
+          <div class="carousel-item <%= 'active' if index == 0 %>">
+            <%= image_tag photo_url, crop: :fill, width: 180%>
+          </div>
+        <% end %>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
     <h4><%= professional.name %></h4>
     <p class="m-0 p-0"><%= professional.address %></p>
   </div>
