--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -15,7 +15,23 @@
       <div id="info-pro">
         <%# image %>
         <div>
-          <%= image_tag(@professional.photo_url, class: "photo_show_pro")%>
+          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <% @professional.photos_url.each_with_index do |photo_url, index| %>
+          <div class="carousel-item <%= 'active' if index == 0 %>">
+            <%= image_tag photo_url, class: "photo_show_pro"%>
+          </div>
+        <% end %>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
         </div>
         <%# info %>
         <div class="d-flex flex-column justify-content-center" style="width: 100%;">
