--- a/app/views/professionals/_appointment_details.html.erb
+++ b/app/views/professionals/_appointment_details.html.erb
@@ -26,7 +26,7 @@
       </div>
       <div class="d-flex flex-column justify-content-start align-items-center">
         <% if Pet.find(@appointment.pet_id).photo.present? %>
-          <%= cl_image_tag Pet.find(@appointment.pet_id).photo.key,  style:"width: 100px; aspect-ratio:1; border-radius: 20px; object-fit: cover;" %>
+          <%= image_tag(Pet.find(@appointment.pet_id).photo_url,  style:"width: 100px; aspect-ratio:1; border-radius: 20px; object-fit: cover;") %>
         <% else %>
           <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(1).jpg", alt:"photo_pet_default", style:"width: 100px; aspect-ratio:1; border-radius: 20px; object-fit: cover;")%>
         <% end %>
